Table users {
  user_id         uuid        [pk, default: `gen_random_uuid()`]
  name            varchar(50) [not null]
  birth_year      int
  gender          varchar(10)             // male, female
  phone           varchar(20)
  email           varchar(100) [not null, unique]
  student_id      varchar(20)
  first_major     varchar(100)
  second_major    varchar(100)
  school_name     varchar(100)
  academic_status varchar(20)             // enrolled, on_leave, graduated, completed, expelled
  account_status  varchar(20) [not null, default: 'active']  // active, inactive, blocked
  current_role    varchar(10) [not null, default: 'none']    // none, mentee, mentor
  created_at      timestamp   [not null, default: `now()`]
  updated_at      timestamp   [not null, default: `now()`]
}

Table mentee_records {
  record_id              uuid         [pk, default: `gen_random_uuid()`]
  user_id                uuid         [not null, ref: > users.user_id]
  process_year           int          [not null]

  // 1단계: 기본정보
  birth_date             date
  major                  varchar(100)
  graduation_year        int
  university_entry_year  int
  first_leet_year        int
  has_leet_experience    boolean      [not null, default: false]
  leet_exam_years        jsonb
  has_law_class          boolean      [not null, default: false]
  law_class_subjects     jsonb

  // 2단계: 정량
  gpa                    decimal(3,2)
  leet_score             decimal(5,2)
  language_score         varchar(50)
  target_school_ga       varchar(100)
  target_school_na       varchar(100)
  is_special_admission   boolean      [not null, default: false]

  // 3단계: 자소서·정성
  qualitative_activities jsonb
  core_keywords          varchar(500)
  story_summary          text

  // 4단계: 기타 고민
  strengths_weaknesses   text
  desired_mentor         text

  // AI 분석 결과
  star_analysis          jsonb        // AI가 분석한 STAR 구조화 결과
  ai_story_outline       text         // AI 추천 자소서 스토리라인
  ai_keywords            jsonb        // AI 추출 핵심 역량 키워드
  ai_analyzed_at         timestamp    // 분석 시각

  // 상태
  current_step           smallint     [not null, default: 1]  // 1~4
  created_at             timestamp    [not null, default: `now()`]
  updated_at             timestamp    [not null, default: `now()`]

  indexes {
    (user_id, process_year) [unique]
  }
}

Table mentor_records {
  record_id                   uuid         [pk, default: `gen_random_uuid()`]
  user_id                     uuid         [not null, ref: > users.user_id]
  process_year                int          [not null]
  current_lawschool           varchar(100)
  graduated_lawschool         varchar(100)
  applied_schools             jsonb
  leet_score                  decimal(5,2)
  gpa                         decimal(3,2)
  graduation_year             int
  leet_exam_year              int
  has_law_class               boolean      [not null, default: false]
  law_class_subjects          jsonb
  personal_statement_summary  text
  strengths_weaknesses        text
  mentoring_fields            jsonb
  career_goal                 text
  is_special_admission        boolean      [not null, default: false]
  created_at                  timestamp    [not null, default: `now()`]
  updated_at                  timestamp    [not null, default: `now()`]

  indexes {
    (user_id, process_year) [unique]
  }
}

Table applications {
  application_id        uuid        [pk, default: `gen_random_uuid()`]
  user_id               uuid        [not null, ref: > users.user_id]
  process_year          int         [not null]
  role                  varchar(10) [not null]  // mentee, mentor
  application_status    varchar(30) [not null, default: 'submitted']  // submitted, approved, rejected, revision_requested
  mentee_record_id      uuid        [ref: - mentee_records.record_id]
  mentor_record_id      uuid        [ref: - mentor_records.record_id]
  submitted_at          timestamp
  approved_at           timestamp
  rejected_at           timestamp
  revision_requested_at timestamp
  created_at            timestamp   [not null, default: `now()`]
  updated_at            timestamp   [not null, default: `now()`]

  indexes {
    (user_id, process_year, role) [unique]
  }
}

Table match_results {
  match_id               uuid         [pk, default: `gen_random_uuid()`]
  process_year           int          [not null]
  mentee_application_id  uuid         [not null, ref: > applications.application_id]
  mentor_application_id  uuid         [not null, ref: > applications.application_id]
  ai_score               decimal(5,2)
  ai_reason              text
  match_status           varchar(20)  [not null, default: 'suggested']  // suggested, draft, finalized, cancelled
  is_finalized           boolean      [not null, default: false]
  created_by             uuid         [ref: > users.user_id]
  created_at             timestamp    [not null, default: `now()`]
  updated_at             timestamp    [not null, default: `now()`]
}

Table admin_memos {
  memo_id        uuid      [pk, default: `gen_random_uuid()`]
  application_id uuid      [not null, ref: > applications.application_id]
  admin_user_id  uuid      [not null, ref: > users.user_id]
  memo_content   text      [not null]
  created_at     timestamp [not null, default: `now()`]
  updated_at     timestamp [not null, default: `now()`]
}
